lab1/Test/L1-A-7-71.output
Error Type A at Line 12
Error Type A at Line 18
Error Type A at Line 30
Error Type A at Line 40
Error Type A at Line 40
